--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "setup": "yarn install && yarn patch-package && yarn allow-scripts",
+    "setup-ci": "yarn install --frozen-lockfile --har && yarn patch-package && yarn allow-scripts",
     "start": "yarn build dev",
     "dist": "yarn build prod",
     "build": "lavamoat development/build/index.js",
