--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@metamask/controllers": "^2.0.5",
     "@metamask/eth-ledger-bridge-keyring": "^0.2.6",
     "@metamask/eth-token-tracker": "^3.0.0",
-    "@metamask/etherscan-link": "^1.1.0",
+    "@metamask/etherscan-link": "git+https://github.com/dsrvlabs/etherscan-link-celo",
     "@metamask/inpage-provider": "git+https://github.com/dsrvlabs/inpage-provider-celo",
     "@popperjs/core": "^2.4.0",
     "@reduxjs/toolkit": "^1.3.2",
