--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "extensionizer": "^1.0.1",
     "fast-json-patch": "^2.0.4",
     "fuse.js": "^3.2.0",
+    "hash-sum": "^2.0.0",
     "human-standard-token-abi": "^2.0.0",
     "json-rpc-engine": "^5.3.0",
     "json-rpc-middleware-stream": "^2.1.1",
