--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@material-ui/core": "^4.11.0",
     "@metamask/controllers": "^2.0.5",
-    "@metamask/eth-ledger-bridge-keyring": "^0.2.6",
+    "@metamask/eth-ledger-bridge-keyring": "git+https://github.com/NAKsir-melody/eth-ledger-bridge-keyring-celo",
     "@metamask/eth-token-tracker": "^3.0.0",
     "@metamask/etherscan-link": "git+https://github.com/dsrvlabs/etherscan-link-celo",
     "@metamask/inpage-provider": "git+https://github.com/dsrvlabs/inpage-provider-celo",
