deps - unify regenerator-runtime versions on 0.13.7

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lavamoat:debug": "lavamoat ./development/build/index.js --writeAutoPolicyDebug"
   },
   "resolutions": {
+    "**/regenerator-runtime": "^0.13.7",
     "**/configstore/dot-prop": "^5.1.1",
     "**/ethers/elliptic": "^6.5.4",
     "**/knex/minimist": "^1.2.5",
