--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "abortcontroller-polyfill": "^1.4.0",
     "await-semaphore": "^0.1.1",
     "bignumber.js": "^4.1.0",
-    "bip39": "^2.2.0",
+    "bip39": "git+https://github.com/dsrvlabs/bip39-celo",
     "bn.js": "^4.11.7",
     "c3": "^0.7.10",
     "classnames": "^2.2.6",
@@ -101,7 +101,7 @@
     "eth-json-rpc-filters": "^4.1.1",
     "eth-json-rpc-infura": "^4.0.2",
     "eth-json-rpc-middleware": "^5.0.2",
-    "eth-keyring-controller": "^6.1.0",
+    "eth-keyring-controller": "git+https://github.com/dsrvlabs/eth-keyring-controller-celo",
     "eth-method-registry": "^1.2.0",
     "eth-phishing-detect": "^1.1.4",
     "eth-query": "^2.1.2",
