build - start of createFactorBundles

--- a/package.json
+++ b/package.json
@@ -213,6 +213,7 @@
     "@types/react": "^16.9.53",
     "addons-linter": "1.14.0",
     "babelify": "^10.0.0",
+    "bify-package-factor": "^1.0.7",
     "brfs": "^2.0.2",
     "browserify": "^16.5.1",
     "chalk": "^3.0.0",
