feat(keystone): support usb connection

--- a/builds.yml
+++ b/builds.yml
@@ -41,6 +41,7 @@ buildTypes:
       - APPLE_PROD_CLIENT_ID
       - GOOGLE_CLIENT_ID_REF: GOOGLE_PROD_CLIENT_ID
       - APPLE_CLIENT_ID_REF: APPLE_PROD_CLIENT_ID
+      - KEYSTONE_USB_ENV: 'production'
     # Main build uses the default browser manifest
     manifestOverrides: false
     # Build name used in multiple user-readable places
