add Keycard Shell to the list of supported QR wallets

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -120,6 +120,7 @@ body:
         - AirGap Vault
         - imToken
         - OneKey
+        - Keycard Shell
         - Other (please elaborate in the "Additional Context" section)
   - type: textarea
     id: additional
