--- a/package.json
+++ b/package.json
@@ -251,6 +251,7 @@
   "dependencies": {
     "@babel/runtime": "patch:@babel/runtime@npm%3A7.25.9#~/.yarn/patches/@babel-runtime-npm-7.25.9-fe8c62510a.patch",
     "@blockaid/ppom_release": "^1.5.3",
+    "@date-io/luxon": "^1.3.13",
     "@ensdomains/content-hash": "^2.5.7",
     "@ethereumjs/tx": "patch:@ethereumjs/tx@npm%3A5.4.0#~/.yarn/patches/@ethereumjs-tx-npm-5.4.0-0c4a0f973e.patch",
     "@ethersproject/abi": "^5.6.4",
@@ -266,6 +267,7 @@
     "@lavamoat/webpack": "1.5.3",
     "@ledgerhq/errors": "^6.21.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.11",
     "@metamask/abi-utils": "^3.0.0",
     "@metamask/account-api": "^0.12.0",
     "@metamask/account-tree-controller": "^3.0.0",
