--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dapp": "node development/static-server.js node_modules/@metamask/test-dapp/dist --port 8080",
     "dapp-multichain": "node development/static-server.js node_modules/@metamask/test-dapp-multichain/build --port 8080",
     "dapp-solana": "node development/static-server.js node_modules/@metamask/test-dapp-solana/dist --port 8080",
+    "dapp-bitcoin": "node development/static-server.js node_modules/@metamask/test-dapp-bitcoin/dist --port 8080",
     "dapp-chain": "GANACHE_ARGS='-b 2' concurrently -k -n ganache,dapp -p '[{time}][{name}]' 'yarn ganache:start' 'sleep 5 && yarn dapp'",
     "forwarder": "node ./development/static-server.js ./node_modules/@metamask/forwarder/dist/ --port 9010",
     "dapp-forwarder": "concurrently -k -n forwarder,dapp -p '[{time}][{name}]' 'yarn forwarder' 'yarn dapp'",
@@ -282,7 +283,7 @@
     "@metamask/assets-controllers": "patch:@metamask/assets-controllers@patch%3A@metamask/assets-controllers@npm%253A93.1.0%23~/.yarn/patches/@metamask-assets-controllers-npm-93.1.0-ea998cb0bd.patch%3A%3Aversion=93.1.0&hash=224a2c#~/.yarn/patches/@metamask-assets-controllers-patch-0229f60576.patch",
     "@metamask/base-controller": "^9.0.0",
     "@metamask/bitcoin-wallet-snap": "^1.8.0",
-    "@metamask/bitcoin-wallet-standard": "file:../../metamask-sdk/bitcoin/bitcoin-wallet-standard",
+    "@metamask/bitcoin-wallet-standard": "file:../bitcoin-wallet-standard",
     "@metamask/bridge-controller": "^64.0.0",
     "@metamask/bridge-status-controller": "^64.0.1",
     "@metamask/browser-passworder": "^6.0.0",
@@ -425,6 +426,7 @@
     "immer": "^9.0.6",
     "is-retry-allowed": "^2.2.0",
     "jest-junit": "^14.0.1",
+    "jsontokens": "^4.0.1",
     "labeled-stream-splicer": "^2.0.2",
     "lavamoat-browserify": "^19.0.2",
     "localforage": "^1.9.0",
@@ -502,6 +504,7 @@
     "@metamask/superstruct": "^3.2.1",
     "@metamask/test-bundler": "^1.0.0",
     "@metamask/test-dapp": "9.3.0",
+    "@metamask/test-dapp-bitcoin": "file:../test-dapp-bitcoin",
     "@metamask/test-dapp-multichain": "^0.17.0",
     "@metamask/test-dapp-solana": "^0.3.1",
     "@metamask/test-snaps": "^3.1.0",
