--- a/builds.yml
+++ b/builds.yml
@@ -99,7 +99,6 @@ buildTypes:
       - SEGMENT_WRITE_KEY_REF: SEGMENT_EXPERIMENTAL_WRITE_KEY
       - ALLOW_LOCAL_SNAPS: false
       - IS_SIDEPANEL: true
-      - METAMASK_SHIELD_ENABLED: true
       - REQUIRE_SNAPS_ALLOWLIST: true
       - REJECT_INVALID_SNAPS_PLATFORM_VERSION: true
       - IFRAME_EXECUTION_ENVIRONMENT_URL: https://execution.metamask.io/iframe/10.2.3/index.html
@@ -453,7 +452,7 @@ env:
   - APPLE_CLIENT_ID_UAT: ''
 
   # Metamask Shield
-  - METAMASK_SHIELD_ENABLED: 'false'
+  - METAMASK_SHIELD_ENABLED: 'true'
 
   # Snaps
   - AUTO_UPDATE_PREINSTALLED_SNAPS: 'true'
