--- a/development/circular-deps.jsonc
+++ b/development/circular-deps.jsonc
@@ -198,29 +198,6 @@
   ["ui/ducks/alerts/unconnected-account.js", "ui/store/actions.ts"],
   [
     "ui/ducks/confirm-transaction/confirm-transaction.duck.js",
-    "ui/ducks/index.js",
-    "ui/ducks/metamask/metamask.js",
-    "ui/ducks/send/send.js",
-    "ui/pages/confirmations/confirmation/ResultTemplate.ts",
-    "ui/pages/confirmations/confirmation/templates/error.js",
-    "ui/pages/confirmations/confirmation/templates/index.js",
-    "ui/selectors/selectors.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
-    "ui/ducks/confirm-transaction/confirm-transaction.duck.js",
-    "ui/ducks/index.js",
-    "ui/ducks/metamask/metamask.js",
-    "ui/pages/confirmations/confirmation/ResultTemplate.ts",
-    "ui/pages/confirmations/confirmation/templates/error.js",
-    "ui/pages/confirmations/confirmation/templates/index.js",
-    "ui/selectors/selectors.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
-    "ui/ducks/confirm-transaction/confirm-transaction.duck.js",
     "ui/ducks/metamask/metamask.js",
     "ui/ducks/send/index.js",
     "ui/ducks/send/send.js",
@@ -231,82 +208,6 @@
     "ui/store/actions.ts"
   ],
   [
-    "ui/ducks/domains.js",
-    "ui/ducks/index.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
-    "ui/ducks/index.js",
-    "ui/ducks/metamask/metamask.js",
-    "ui/ducks/ramps/ramps.ts",
-    "ui/pages/confirmations/confirmation/ResultTemplate.ts",
-    "ui/pages/confirmations/confirmation/templates/error.js",
-    "ui/pages/confirmations/confirmation/templates/index.js",
-    "ui/selectors/multichain.ts",
-    "ui/selectors/selectors.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
-    "ui/ducks/index.js",
-    "ui/ducks/metamask/metamask.js",
-    "ui/ducks/swaps/swaps.js",
-    "ui/hooks/useTokenFiatAmount.js",
-    "ui/pages/confirmations/confirmation/ResultTemplate.ts",
-    "ui/pages/confirmations/confirmation/templates/error.js",
-    "ui/pages/confirmations/confirmation/templates/index.js",
-    "ui/selectors/selectors.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
-    "ui/ducks/index.js",
-    "ui/ducks/metamask/metamask.js",
-    "ui/ducks/swaps/swaps.js",
-    "ui/pages/confirmations/confirmation/ResultTemplate.ts",
-    "ui/pages/confirmations/confirmation/templates/error.js",
-    "ui/pages/confirmations/confirmation/templates/index.js",
-    "ui/selectors/selectors.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
-    "ui/ducks/index.js",
-    "ui/ducks/metamask/metamask.js",
-    "ui/pages/confirmations/confirmation/ResultTemplate.ts",
-    "ui/pages/confirmations/confirmation/templates/error.js",
-    "ui/pages/confirmations/confirmation/templates/index.js",
-    "ui/selectors/selectors.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
-    "ui/ducks/index.js",
-    "ui/ducks/ramps/ramps.ts",
-    "ui/pages/confirmations/confirmation/ResultTemplate.ts",
-    "ui/pages/confirmations/confirmation/templates/error.js",
-    "ui/pages/confirmations/confirmation/templates/index.js",
-    "ui/selectors/multichain.ts",
-    "ui/selectors/selectors.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
-    "ui/ducks/index.js",
-    "ui/ducks/swaps/swaps.js",
-    "ui/helpers/utils/token-util.js",
-    "ui/hooks/useTokenFiatAmount.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
-    "ui/ducks/index.js",
-    "ui/ducks/swaps/swaps.js",
-    "ui/store/actions.ts",
-    "ui/store/store.ts"
-  ],
-  [
     "ui/ducks/metamask/metamask.js",
     "ui/pages/confirmations/confirmation/ResultTemplate.ts",
     "ui/pages/confirmations/confirmation/templates/error.js",
@@ -314,5 +215,11 @@
     "ui/selectors/selectors.js",
     "ui/store/actions.ts"
   ],
-  ["ui/ducks/metamask/metamask.js", "ui/selectors/selectors.js"]
+  [
+    "ui/ducks/metamask/metamask.js",
+    "ui/selectors/multichain.ts",
+    "ui/selectors/selectors.js"
+  ],
+  ["ui/ducks/metamask/metamask.js", "ui/selectors/selectors.js"],
+  ["ui/selectors/multichain.ts", "ui/selectors/selectors.js"]
 ]
