--- a/codecov.yml
+++ b/codecov.yml
@@ -1,18 +1,18 @@
 codecov:
   bot: 'codecov-io'
   require_ci_to_pass: yes
+
 coverage:
   round: nearest
   status:
     project: off
-    patch:
-      off
-      # global:
-      #   target: auto
-      #   threshold: 0%
-      #   base: auto
-      # transforms:
-      #   target: 100%
-      #   threshold: 0%
-      #   paths:
-      #     - development/build/transforms/**/*.js
+    patch: off
+    # global:
+    #   target: auto
+    #   threshold: 0%
+    #   base: auto
+    # transforms:
+    #   target: 100%
+    #   threshold: 0%
+    #   paths:
+    #     - development/build/transforms/**/*.js
