--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -70,6 +70,13 @@ npmAuditIgnoreAdvisories:
   - 1104031
   - 1104032
 
+  # Issue: glob CLI command injection via -c/--cmd
+  # URL: https://github.com/advisories/GHSA-5j98-mcp5-4vw2
+  # Tailwindcss transitively installs sucrase, which still relies on glob v10 CLI.
+  # We only use Tailwind in build tooling, never exposing the CLI. We will remove
+  # the dependency once upstream publishes a patched release. Until then, CI is unblocked.
+  - 1109809
+
   # Temp fix for https://github.com/MetaMask/metamask-extension/pull/16920 for the sake of 11.7.1 hotfix
   # This will be removed in this ticket https://github.com/MetaMask/metamask-extension/issues/22299
   - 'ts-custom-error (deprecation)'
