--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -72,9 +72,7 @@ npmAuditIgnoreAdvisories:
 
   # Issue: glob CLI command injection via -c/--cmd
   # URL: https://github.com/advisories/GHSA-5j98-mcp5-4vw2
-  # Tailwindcss transitively installs sucrase, which still relies on glob v10 CLI.
-  # We only use Tailwind in build tooling, never exposing the CLI. We will remove
-  # the dependency once upstream publishes a patched release. Until then, CI is unblocked.
+  # Tailwindcss transitively installs sucrase, which still relies on the glob v10 CLI.
   - 1109809
 
   # Temp fix for https://github.com/MetaMask/metamask-extension/pull/16920 for the sake of 11.7.1 hotfix
