--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "build:test:mv2": "ENABLE_MV3=false BLOCKAID_FILE_CDN=static.cx.metamask.io/api/v1/confirmations/ppom yarn build:test",
     "build:test:webpack": "BLOCKAID_FILE_CDN=static.cx.metamask.io/api/v1/confirmations/ppom yarn env:e2e webpack --env production --test --browser=chrome --browser=firefox --no-cache --zip",
     "test": "yarn lint && yarn test:unit",
+    "test:warnings:update:unit": "tsx development/generate-warnings-snapshot.ts unit",
+    "test:warnings:update:integration": "tsx development/generate-warnings-snapshot.ts integration",
+    "test:warnings:update:e2e": "tsx development/generate-warnings-snapshot.ts e2e",
     "dapp": "node development/static-server.js node_modules/@metamask/test-dapp/dist --port 8080",
     "dapp-multichain": "node development/static-server.js node_modules/@metamask/test-dapp-multichain/build --port 8080",
     "dapp-solana": "node development/static-server.js node_modules/@metamask/test-dapp-solana/dist --port 8080",
