--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -70,6 +70,11 @@ npmAuditIgnoreAdvisories:
   - 1104031
   - 1104032
 
+  # Issue: `glob` vulnerability, already fixed in the version we're using (v10.5.0) but the
+  # advisory range hasn't been updated yet.
+  # URL: https://github.com/advisories/GHSA-5j98-mcp5-4vw2
+  - 1109809
+
   # Temp fix for https://github.com/MetaMask/metamask-extension/pull/16920 for the sake of 11.7.1 hotfix
   # This will be removed in this ticket https://github.com/MetaMask/metamask-extension/issues/22299
   - 'ts-custom-error (deprecation)'
