--- a/package.json
+++ b/package.json
@@ -243,7 +243,12 @@
     "@endo/env-options@npm:^1.1.8": "patch:@endo/env-options@npm%3A1.1.11#~/.yarn/patches/@endo-env-options-npm-1.1.11-1b7fae374a.patch",
     "@metamask/jazzicon@npm:^2.0.0": "patch:@metamask/jazzicon@npm%3A2.0.0#~/.yarn/patches/@metamask-jazzicon-npm-2.0.0-36957be38d.patch",
     "@rive-app/canvas@npm:2.31.5": "patch:@rive-app/canvas@patch%3A@rive-app/canvas@patch%253A@rive-app/canvas@npm%25253A2.31.5%2523~/.yarn/patches/@rive-app-canvas-npm-2.31.5-df519c6e0f.patch%253A%253Aversion=2.31.5&hash=1ed092%23~/.yarn/patches/@rive-app-canvas-patch-9b746e9393.patch%3A%3Aversion=2.31.5&hash=19c5d0#~/.yarn/patches/@rive-app-canvas-patch-03752f0c3b.patch",
-    "addons-linter/glob": "^10.5.0"
+    "addons-linter/glob": "^10.5.0",
+    "@metamask/controller-utils@npm:^11.15.0": "npm:@metamask-previews/controller-utils@11.15.0-preview-dabf9bd8",
+    "@metamask/eth-json-rpc-middleware@npm:^21.0.0": "npm:@metamask-previews/eth-json-rpc-middleware@21.0.0-preview-dabf9bd8",
+    "@metamask/eth-json-rpc-provider@npm:^5.0.1": "npm:@metamask-previews/eth-json-rpc-provider@5.0.1-preview-dabf9bd8",
+    "@metamask/network-controller@npm:^25.0.0": "npm:@metamask-previews/network-controller@25.0.0-preview-dabf9bd8",
+    "@metamask/json-rpc-engine@npm:^10.1.1": "npm:@metamask-previews/json-rpc-engine@10.1.1-preview-dabf9bd8"
   },
   "dependencies": {
     "@babel/runtime": "patch:@babel/runtime@npm%3A7.25.9#~/.yarn/patches/@babel-runtime-npm-7.25.9-fe8c62510a.patch",
