--- a/package.json
+++ b/package.json
@@ -248,6 +248,8 @@
     "@metamask/eth-json-rpc-middleware@npm:^21.0.0": "npm:@metamask-previews/eth-json-rpc-middleware@21.0.0-preview-dabf9bd8",
     "@metamask/eth-json-rpc-provider@npm:^5.0.1": "npm:@metamask-previews/eth-json-rpc-provider@5.0.1-preview-dabf9bd8",
     "@metamask/network-controller@npm:^25.0.0": "npm:@metamask-previews/network-controller@25.0.0-preview-dabf9bd8",
+    "@metamask/json-rpc-engine@npm:^10.0.0": "npm:@metamask-previews/json-rpc-engine@10.1.1-preview-dabf9bd8",
+    "@metamask/json-rpc-engine@npm:^10.0.3": "npm:@metamask-previews/json-rpc-engine@10.1.1-preview-dabf9bd8",
     "@metamask/json-rpc-engine@npm:^10.1.1": "npm:@metamask-previews/json-rpc-engine@10.1.1-preview-dabf9bd8"
   },
   "dependencies": {
