--- a/.github/workflows/e2e-firefox.yml
+++ b/.github/workflows/e2e-firefox.yml
@@ -45,8 +45,8 @@ jobs:
           [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
     with:
       test-suite-name: test-e2e-firefox-webpack
-      build-artifact: build-test-webpack
-      build-command: yarn build:test:webpack
+      build-artifact: build-test-mv2-webpack
+      build-command: yarn build:test:webpack:mv2
       test-command: yarn test:e2e:firefox
       builds-from-run: ${{ inputs.builds-from-run }}
       matrix-index: ${{ matrix.index }}
