--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "build:test:flask:mv2": "ENABLE_MV3=false yarn build:test:flask",
     "build:test:mv2": "ENABLE_MV3=false BLOCKAID_FILE_CDN=static.cx.metamask.io/api/v1/confirmations/ppom yarn build:test",
     "build:test:webpack": "BLOCKAID_FILE_CDN=static.cx.metamask.io/api/v1/confirmations/ppom yarn env:e2e webpack --env production --test --browser=chrome --browser=firefox --no-cache --zip",
+    "build:test:webpack:mv2": "BLOCKAID_FILE_CDN=static.cx.metamask.io/api/v1/confirmations/ppom yarn env:e2e webpack --env production --test --browser=chrome --browser=firefox --no-cache --zip -v 2",
     "test": "yarn lint && yarn test:unit",
     "dapp": "node development/static-server.js node_modules/@metamask/test-dapp/dist --port 8080",
     "dapp-multichain": "node development/static-server.js node_modules/@metamask/test-dapp-multichain/build --port 8080",
@@ -262,7 +263,7 @@
     "@keystonehq/bc-ur-registry-eth": "^0.21.0",
     "@lavamoat/lavadome-react": "0.0.20",
     "@lavamoat/snow": "^2.0.4",
-    "@lavamoat/webpack": "1.5.1",
+    "@lavamoat/webpack": "1.5.3",
     "@ledgerhq/errors": "^6.21.0",
     "@material-ui/core": "^4.12.4",
     "@metamask/abi-utils": "^3.0.0",
