--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -242,6 +242,17 @@ jobs:
       builds-from-run: ${{ needs.identify-builds.outputs.builds-from-run }}
     secrets: inherit
 
+  build-test-mv2-webpack:
+    needs:
+      - identify-builds
+    uses: ./.github/workflows/run-build.yml
+    with:
+      build-name: build-test-mv2-webpack
+      build-command: yarn build:test:webpack:mv2
+      validate-source-maps: false # Disabled as webpack outputs are not supported by validate-source-maps
+      builds-from-run: ${{ needs.identify-builds.outputs.builds-from-run }}
+    secrets: inherit
+
   run-benchmarks:
     # If not a fork, run benchmarks
     if: ${{ !(github.event.pull_request.head.repo.fork || github.event.repository.fork) }}
@@ -250,7 +261,9 @@ jobs:
       - identify-builds
       - prep-deps
       - build-test-browserify
+      - build-test-mv2-browserify
       - build-test-webpack
+      - build-test-mv2-webpack
     with:
       builds-from-run: ${{ needs.identify-builds.outputs.builds-from-run }}
     secrets:
@@ -341,7 +354,7 @@ jobs:
       - needs-e2e
       - build-dist-mv2-browserify
       - build-test-mv2-browserify
-      - build-test-webpack
+      - build-test-mv2-webpack
       - build-test-flask-mv2-browserify
     if: ${{ needs.needs-e2e.outputs.needs-e2e == 'true' }}
     uses: ./.github/workflows/e2e-firefox.yml
@@ -539,6 +552,7 @@ jobs:
       - build-test-flask-browserify
       - build-test-flask-mv2-browserify
       - build-test-webpack
+      - build-test-mv2-webpack
       - run-tests
       - build-storybook
       - build-ts-migration-dashboard
