--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,13 +6,13 @@ sonar.projectKey=metamask-extension
 sonar.organization=consensys
 
 # Source
-sonar.sources=app,development,offscreen,shared,types,ui
+sonar.sources=app,development,shared,types,ui
 
 # Exclude tests and stories from all analysis (to avoid code coverage, duplicate code, security issues, etc.)
 sonar.exclusions=**/*.test.**,**/*.spec.**,app/images,test/e2e/page-objects,test/data,**/*.stories.js,**/*.stories.tsx
 
 # Tests
-sonar.tests=app,development,offscreen,shared,test,types,ui
+sonar.tests=app,development,shared,test,types,ui
 sonar.test.inclusions=**/*.test.**,**/*.spec.**
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
