fix: update sei rpc and default network (#37681)
<!--
Please submit this PR as a draft initially.
Do not mark it as "Ready for review" until the template has been
completely filled out, and PR status checks have passed at least once.
-->

## **Description**

<!--
Write a short description of the changes included in this pull request,
also include relevant motivation and context. Have in mind the following
questions:
1. What is the reason for the change?
2. What is the improvement/solution?
-->

This change removes Sei from the default preloaded networks so that it
no longer appears as a default entry in the networks list.
Instead, it will now be displayed under Additional Networks, allowing
users to manually add it if needed.

Additionally, this update introduces a fallback RPC for Sei
(QUICKNODE_SEI_URL) in customNetworks.tsx, ensuring improved redundancy
and reliability when Infura is unavailable.


[![Open in GitHub
Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/MetaMask/metamask-extension/pull/37681?quickstart=1)

## **Changelog**

<!--
If this PR is not End-User-Facing and should not show up in the
CHANGELOG, you can choose to either:
1. Write `CHANGELOG entry: null`
2. Label with `no-changelog`

If this PR is End-User-Facing, please write a short User-Facing
description in the past tense like:
`CHANGELOG entry: Added a new tab for users to see their NFTs`
`CHANGELOG entry: Fixed a bug that was causing some NFTs to flicker`

(This helps the Release Engineer do their job more quickly and
accurately)
-->

CHANGELOG entry: removed Sei from default networks and added QuickNode
fallback RPC.


## **Related issues**

Fixes:

## **Manual testing steps**


```gherkin
Feature: Sei network configuration updates

  Scenario: Verify Sei is not listed as a default network
    Given the app is freshly installed or reset
    When I open the list of default networks
    Then I should NOT see "Sei" listed in the main network list
    And I should s

--- a/builds.yml
+++ b/builds.yml
@@ -302,6 +302,7 @@ env:
   - QUICKNODE_POLYGON_URL: null
   - QUICKNODE_BASE_URL: null
   - QUICKNODE_BSC_URL: null
+  - QUICKNODE_SEI_URL: null
 
   ###
   # API keys to 3rd party services
