--- a/package.json
+++ b/package.json
@@ -434,7 +434,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
-    "react-compiler-runtime": "19.1.0-rc.3",
+    "react-compiler-runtime": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-focus-lock": "^2.9.4",
     "react-idle-timer": "4.5.6",
@@ -583,7 +583,7 @@
     "addons-linter": "^6.28.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.12.0",
-    "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "babel-plugin-react-compiler": "^1.0.0",
     "babelify": "^10.0.0",
     "bify-module-groups": "^2.0.0",
     "browserify": "^17.0.0",
